# quantum_graphcalc

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  utils.py
src/scripts/: newinputfunc.py
